# amf-rs

./: Cargo.toml  README.md
.github/workflows/: build-release.yml
benches/: amf_benches.rs  utf8_benchmark.rs
examples/: quickstart.rs  test.flv
src/: amf0.rs  errors.rs  lib.rs  traits.rs  type_marker.rs  utf8.rs
src/amf0/: boolean.rs  marker.rs  mod.rs  nested.rs  number.rs  object_end.rs  string.rs  traits.rs  type_marker.rs  unsupported.rs  utf8.rs
tests/: amf0_types_tests.rs  integration_test.rs
