[package]
name = "amf-rs"
version = "0.1.0"
edition = "2024"
description = "🦀 Rust implementation of Action Message Format (AMF) protocol."
authors = ["ubizhang@hotmail.com"]
license = "GPL-3.0-or-later"
repository = "https://github.com/F2077/amf-rs"

[dependencies]
indexmap = "2.10.0"

[dev-dependencies]
regex = "1.11.1"
once_cell = "1.21.3"

[features]
default = []